--- a/source/sass/_Buttons.scss
+++ b/source/sass/_Buttons.scss
@@ -26,6 +26,14 @@
 	font-size: 1vw;
 	border-radius: 1vw;
 }
+.time-button{
+	height:2vw;
+	width:7vw;
+	border-style: solid;
+	background-color: $pinkyred;
+	font-size: 1.5vw;
+	border-radius: 1vw;
+}
 .small-button{
 	height:2vw;
 	width:7vw;
