--- a/source/stylesheet.scss
+++ b/source/stylesheet.scss
@@ -2,13 +2,14 @@
 @import "./sass/textformats";
 @import "./sass/Buttons";
 @import "./sass/settings";
+@import "./sass/FoundationChanges";
 
 .displayTime{
 	color:blue;
 }
 .sticky{
 	width:100%;
-	background-color: black;
+	background-color: transparent;
 	color:white;
 }
 .backdrop{
@@ -40,14 +41,10 @@
 }
 .separator .row {
 	margin-top: 3vw;
-	padding-top: 3vw;
-	color: $verylightyellow;
-	background-color: $verylightyellow;
+	padding-top: 1vw;
 }
 .separator {
 	max-width: 100%;
-	min-height:30%;
-	background-color: white;
 }
 .table-week{
 	width: 100%;
@@ -61,6 +58,7 @@
 	border-left:1px solid black;
 	width:2vw;
 	height:2vw;
+	padding:none;
 }
 .hidden{
 	display:none;
@@ -138,9 +136,7 @@
 	width:100%;
 	margin:none;
 }
-.treatment-button{
-	margin:1vw 1vw 1vw 1vw;
-}
+
 .calendar-style{
 	color:blue;
 }
@@ -149,4 +145,11 @@
 }
 .time-div{
 	height:3vw;
+}
+.time-column-style{
+	border-left:solid 1px;
+}
+.menuDiv .clientMenu{
+	width:100%;
+	height:2vw;
 }
